cluster-media-apps/torrent/templates/tracker-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: tcp-ingressroute
spec:
  entryPoints:
    - trackertcp
  routes:
    - match: HostSNI(`*`)
      services:
        - name: utptcp
          port: 30402
